# Johns_Cpp_Chess_AI

./: CMakeLists.txt  ChessConstants.h  Magics.h  Makefile  Movement.cpp  Movement.h  Pieces.h  Position.cpp  Position.h  README.md  UCIHandler.cpp  UCIHandler.h  Utilities.cpp  Utilities.h  Zobrists.h  main.cpp  miniproj_main.cpp  miniproj_main.h  unittests.cpp  unittests.h
